--- a/trunk/html/default.htm
+++ b/trunk/html/default.htm
@@ -29,9 +29,10 @@
 </div>
 
 <p>
-	ServiceStack allows you to build re-usable SOA-style web services with plain
-	<acronym title="Plain Old CSharp Objects">POCO</acronym>
-	DataContract classes. The same DTO classes can be shared with a .NET client application which eliminates the need for any generated code.
+	ServiceStack allows you to build re-usable <acronym title="Services Orientated Architecture">SOA</acronym>-style
+	web services with plain <acronym title="Plain Old CSharp Objects">POCO</acronym> DataContract classes.
+	The same <acronym title="Data Tranfer Objects">DTO</acronym>'s can be shared with a
+	.NET client application which eliminates the need for any generated code.
 </p>
 
 <p>
