--- a/trunk/html/default.htm
+++ b/trunk/html/default.htm
@@ -24,8 +24,8 @@
 <div id="content">
 
 <div id="img-overview">
-	<img src="ss-overview.png" alt="Service Stack Overview" title="Service Stack Overview" />
-	<a href="#">view architecture overview</a>
+	<a href="overview.htm"><img src="ss-overview.png" alt="Service Stack Overview" title="Service Stack Overview" /></a>
+	<a href="overview.htm">view architecture overview</a>
 </div>
 
 <p>
@@ -38,12 +38,7 @@
 <p>
 	<a href="http://www.servicestack.net/monotouch/remote-info/step4.htm">Creating a web service</a>
 	 is done by adding a new
-	Request
-	and
-	Response
-	DataContract and the
-	Handler
-	to handle them.
+	Request and Response DataContract and the Handler to handle them.
 	With no other configuration required, they are immediately discoverable and callable via the following supported endpoints:
 </p>
 <ul>
