--- a/trunk/html/overview.htm
+++ b/trunk/html/overview.htm
@@ -36,7 +36,7 @@
 	You only need to write your service logic against strongly-typed DataContract's and Service Stack
 	takes care of hosting and translating your service on all the available endpoints.
 	The endpoint protocols and transport is completely abstracted away (although still discoverable)
-	free-ing you to concentrate
+	free-ing you to concentrate on implementing the web service logic only.
 </p>
 
 <p>
