--- a/trunk/ServiceStack.Examples/ServiceStack.Examples.Clients/Silverlight.htm
+++ b/trunk/ServiceStack.Examples/ServiceStack.Examples.Clients/Silverlight.htm
@@ -58,7 +58,7 @@
 <!--        <a href="Flash.htm">Flash Examples</a>-->
     </div>
 
-    <a href="http://www.servicestack.net/ServiceStack.Examples.Clients/"><img src="img/demo-logo-servicestack.png" alt="Service Stack Demo" /></a>
+    <a href="http://www.servicestack.net"><img src="img/demo-logo-servicestack.png" alt="Service Stack Demo" /></a>
 
     <h1>Calling web services using Silverlight</h1>
 
