--- a/trunk/html/default.htm
+++ b/trunk/html/default.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Open source Mono and .NET web services framework</title>
+    <title>Open source .NET and Mono web services framework</title>
     <link rel="stylesheet" type="text/css" href="default.css" />
 </head>
 <body class="host">
@@ -9,7 +9,7 @@
 	<a id="btn-googlecode" href="http://code.google.com/p/servicestack" title="go to service stack project on google code"><img src="btn-googlecode.png" alt="google code project" alt="Google Code logo" /></a>
 
 	<a href="http://www.servicestack.net" title="Open source Mono and .NET web service framework"><img src="logo-servicestack.png" alt="Service Stack" /></a>
-	<h3 id="logo-title">Open source Mono and .NET web services framework</h3>
+	<h3 id="logo-title">Open source .NET and Mono web services framework</h3>
 
 	<div id="breadcrumbs">
 		<a href="http://www.servicestack.net" class="selected">servicestack.net</a>
@@ -119,7 +119,7 @@
 			<ul>
 				<li>Native support for persisting POCO objects</li>
 				<li>Has both low-level raw bytes and high-level typed access</li>
-				<li>Exposes Redis server-side lists &amp; sets as IList&lt;&gt; ICollection&lt;&gt;</li>
+				<li>Expose Redis server-side lists &amp; sets as IList&lt;&gt; ICollection&lt;&gt;</li>
 				<li>Rich API support</li>
 				<li>Comprehensive regression and test suite</li>
 			</ul>
