--- a/trunk/html/default.htm
+++ b/trunk/html/default.htm
@@ -70,8 +70,8 @@
 		easy drop-in into any .NET project.
 	</span>
 
-	<a href="http://servicestack.googlecode.com/files/ServiceStack.zip">
-		<img src="btn-download.gif" alt="Download ServiceStack.zip" />
+	<a href="http://servicestack.googlecode.com/files/ServiceStack.Examples.zip">
+		<img src="btn-download.gif" alt="Download ServiceStack.Examples.zip" />
 	</a>
 </div>
 
