--- a/trunk/html/default.htm
+++ b/trunk/html/default.htm
@@ -34,7 +34,7 @@
 
 <p>
 	Developed in the modern era, it has first-class support for IOC, testing and convention-based development
-	enabling you to to develop your webservices entirely using clean, pure <acronym title="Plain Old CSharp Objects">POCO</acronym>
+	enabling you to to develop your webservices entirely using pure, clean <acronym title="Plain Old CSharp Objects">POCO</acronym>
 	DataContract's that are decoupled from the endpoint that it is hosted on.
 </p>
 
