--- a/trunk/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/tests/default.htm
+++ b/trunk/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/tests/default.htm
@@ -17,9 +17,58 @@
 			ObjectAssert = YAHOO.util.ObjectAssert,
 			UserAction = YAHOO.util.UserAction;
 
-        var Class = AjaxStack.Class, is = AjaxStack.is, H = AjaxStack.Html, 
-            Path = AjaxStack.Path, S = AjaxStack.StringExt;
+        var Class = AjaxStack.Class,
+            Path = AjaxStack.Path,
+            H = AjaxStack.Html,
+            is = AjaxStack.is,
+            S = AjaxStack.StringExt,
+            O = AjaxStack.ObjectExt, 
+            A = AjaxStack.ArrayExt;
 
+        
+        /* Redis Test Utils */
+        var redis = new RedisClient("http://localhost/RedisWebServices.Host/Public/");
+
+        var redisAssertValue = function(key, expected) {
+            return function(value) {
+                redis.getValue(key, function(value) {
+                    Assert.areEqual(expected, value);
+                }, failFn);
+            }
+        };
+
+        var testKey = "testkey";
+        var testValue = "Hello";
+        var stringValues = [ "A", "B", "C" ];
+        var intValues = [ 1, 2, 3 ];
+
+        var failFn = function(error) {
+            alert("error: " + S.toString(error));
+            Assert.fail("onErrorFn called" + S.toString(error));
+        }
+        var resume = this.resume;
+
+        var onAfterFlushAllAndSetTeskKey = function(onSuccessFn, onErrorFn)
+        {
+            redis.flushAll(function(){
+                redis.setEntry(testKey, testValue, onSuccessFn, onErrorFn);
+            }, onErrorFn || failFn);
+        };
+
+        var onAfterFlushAllAndAllStringValuesSet = function(onSuccessFn, onErrorFn)
+        {
+            var i = 0;
+            redis.flushAll(function() {
+                for (var i in stringValues) {
+                    redis.setEntry(stringValues[i], stringValues[i], function() {
+                        if (i++ == stringValues.length - 1) onSuccessFn();
+                    }, onErrorFn || failFn);
+                }
+            }, onErrorFn || failFn);
+        };
+        
+
+        /* Import and run all test suites */
         var classTestSuite = new YAHOO.tool.TestSuite("Redis UI Suite");
         for (var name in YAHOO.ajaxstack)
         {
